f-message-crud: add model, repository,service, exception and controller

--- a/src/main/webapp/resources/plugins/daterangepicker/website/index.html
+++ b/src/main/webapp/resources/plugins/daterangepicker/website/index.html
@@ -695,7 +695,7 @@
                     </p>
 
                     <p>
-                        The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+                        The above copyright message and this permission message shall be included in all copies or substantial portions of the Software.
                     </p>
 
                     <p>
